--- a/pao/assets/sass/main.sass
+++ b/pao/assets/sass/main.sass
@@ -100,9 +100,6 @@
 		bottom: 0
 		z-index: -1
 
-	&::before
-		background: rgba(17, 17, 17, 0.4)
-
 	&::after
 		background: rgba(17, 17, 17, 1)
 		z-index: -3
@@ -115,9 +112,17 @@
 	&--page
 		min-height: 160px
 		padding: 0 !important
+		background: url(../img/hero-page--bg.jpg)
+		background-size: cover
+		background-repeat: no-repeat
+		background-position: center
+
+		&::before
+			background: rgba(17, 17, 17, 0.7)
 
 		video
 			width: 100%
+
 
 	&__tel
 		display: none
@@ -335,6 +340,7 @@
 			img
 				border-radius: 4px
 				width: 100%
+				height: auto
 				margin-bottom: 7px
 
 	p
